url of repository has been clarified

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/hitachi567/template.git"
+        "url": "https://github.com/hitachi567/clean-template.git"
     },
     "keywords": [
         "template",
